--- a/PervasiveWeb/ivy.xml
+++ b/PervasiveWeb/ivy.xml
@@ -50,6 +50,7 @@
 		<dependency org="org.vaadin.addons" name="restrain" rev="0.1" />
 		<dependency org="org.vaadin.addons" name="dcharts-widget" rev="1.7.0" />
 		<dependency org="com.vaadin.addon" name="vaadin-charts" rev="2.1.0.beta1" />
+		<dependency org="com.vaadin" name="vaadin-push" rev="&vaadin.version;" conf="default->default"/>
 		
 	</dependencies>
 </ivy-module>
