--- a/PervasiveWeb/.settings/com.vaadin.integration.eclipse.prefs
+++ b/PervasiveWeb/.settings/com.vaadin.integration.eclipse.prefs
@@ -1,5 +1,5 @@
-com.vaadin.integration.eclipse.previousCompileAction=theme
+com.vaadin.integration.eclipse.previousCompileAction=both
 com.vaadin.integration.eclipse.useLatestNightly=false
-com.vaadin.integration.eclipse.widgetsetCompilationEta=58693
-com.vaadin.integration.eclipse.widgetsetDirty=false
+com.vaadin.integration.eclipse.widgetsetCompilationEta=60268
+com.vaadin.integration.eclipse.widgetsetDirty=true
 eclipse.preferences.version=1
