--- a/PervasiveWeb/ivy.xml
+++ b/PervasiveWeb/ivy.xml
@@ -45,8 +45,8 @@
 			rev="&vaadin.version;" conf="widgetset-compile->default" />
 		
 		<dependency org="com.github.thiagolocatelli" name="parse4j" rev="1.4" />
-		<dependency org="org.vaadin.addons" name="animator" rev="2.0.0" />
-		<dependency org="org.vaadin.addons" name="dom" rev="0.1.0" />
+		<!--dependency org="org.vaadin.addons" name="animator" rev="2.0.0" /-->
+		<!--dependency org="org.vaadin.addons" name="dom" rev="0.1.0" /-->
 		<dependency org="org.vaadin.addons" name="restrain" rev="0.1" />
 		<dependency org="org.vaadin.addons" name="dcharts-widget" rev="1.7.0" />
 		<dependency org="com.vaadin.addon" name="vaadin-charts" rev="2.1.0.beta1" />
