--- a/PervasiveWeb/ivy.xml
+++ b/PervasiveWeb/ivy.xml
@@ -52,6 +52,8 @@
 		<dependency org="com.vaadin.addon" name="vaadin-charts" rev="2.1.0.beta1" />
 		<dependency org="com.vaadin" name="vaadin-push" rev="&vaadin.version;" conf="default->default"/>
 		<dependency org="com.github.thiagolocatelli" name="parse4j" rev="1.4"/>
+		<dependency org="org.vaadin.addons" name="digitalclock" rev="1.0.0"/>
+		
 		
 	</dependencies>
 </ivy-module>
